--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- <app-employee-dashboard></app-employee-dashboard> -->
-<div *ngFor="let item of result">{{item.email}}</div>
+<app-employee-dashboard></app-employee-dashboard>
+<!-- <div *ngFor="let item of result">{{item.email}}</div> -->
