--- a/src/app/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee-dashboard/employee-dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <h1>Add Data</h1>
     <div class="d-flex">
-      <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-success">Add Employee
+      <button type="button" (click)="clickAddEmployee()" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-success">Add Employee
       </button>
     </div>
   </div>
@@ -29,8 +29,8 @@
       <td>{{data.mobile}}</td>
       <td>{{data.salary}}</td>
       <td>
-        <button class="btn btn-info">Edit</button>
-        <button class="btn btn-danger mx-3">Delete</button>
+        <button type="button" (click)="onEdit(data)" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">Edit</button>
+        <button (click)="deleteEmployeeData(data)" class="btn btn-danger mx-3">Delete</button>
       </td>
     </tr>
   </tbody>
@@ -75,7 +75,8 @@
       </div>
       <div class="modal-footer">
         <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="postEmployeeDetails()">Add</button>
+        <button type="button" *ngIf="showAdd" class="btn btn-primary" (click)="postEmployeeDetails()">Add</button>
+        <button type="button" *ngIf="showUpdate" class="btn btn-primary" (click)="updateEmployeeDetails()">Update</button>
       </div>
     </div>
   </div>
