--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-employee-dashboard></app-employee-dashboard>
 <!-- <div *ngFor="let item of result">{{item.email}}</div> -->
+
+<h2 appCustomStyle>Hey is this new something</h2>
