--- a/src/app/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee-dashboard/employee-dashboard.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-primary">
   <div class="container-fluid">
-    <h1>{{username}}</h1>
+    <h1 appCustomStyle>{{username}}</h1>
     <div class="d-flex">
       <button type="button" (click)="clickAddEmployee()" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-success">Add Employee
       </button>
